--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "health-shop",
+  "name": "new-retail-shop",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "webhzp <1225613448@qq.com>",
