--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem-exclude": "0.0.6",
     "vant": "^2.0.2",
