--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-md5": "^0.7.3",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem-exclude": "0.0.6",
+    "qrcodejs2": "0.0.2",
     "vant": "^2.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
